--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         p {
             margin: 1% auto;
             max-width: 60%;
-            size: 20em;
+            font-size: 2em;
         }
 
         body {
@@ -39,9 +39,19 @@
 </div>
 <div class="left">箭头</div>
 <br/>
-<div class="center"><p>葡萄糖</p></div>
-<div class="center"><p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具</p></div>
-<div class="left"><!img url="image/人头.png"/><p>人口</p></div>
-<div class="right"><!img url="image/葡萄藤logo.png"/><p>logo</p></div>
+<div class="center">
+    <p>葡萄糖</p>
+</div>
+<div class="center">
+    <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具</p>
+</div>
+<div class="left">
+    <div class="ellipse"><img src="image/人头.png"/></div>
+    <p>人口</p>
+</div>
+<div class="right">
+    <div class="ellipse"><img src="image/葡萄藤logo.png"/></div>
+    <p>logo</p>
+</div>
 </body>
 </html>
