THE first commit ,do some eddit for  its cramework

--- a/home.html
+++ b/home.html
@@ -40,6 +40,7 @@
 <div class="left">箭头</div>
 <br/>
 <div class="center">
+    <img src="image/葡萄藤logo.png"/>
     <p>葡萄糖</p>
 </div>
 <div class="center">
@@ -47,10 +48,12 @@
 </div>
 <div class="left">
     <div class="ellipse"><img src="image/人头.png"/></div>
+    <br/>
     <p>人口</p>
 </div>
 <div class="right">
     <div class="ellipse"><img src="image/葡萄藤logo.png"/></div>
+    <br/>
     <p>logo</p>
 </div>
 </body>
