have change some img source

--- a/home.html
+++ b/home.html
@@ -14,6 +14,14 @@
             background-color: #68CDD5;
         }
 
+        #div {
+            display: table-cell;
+            vertical-align: middle;
+            margin: 0 15% 0 15%;
+            backgroud: red;
+            border: red;
+        }
+
         .left {
             float: left;
             display: block;
@@ -40,14 +48,13 @@
 <div class="left">箭头</div>
 <br/>
 <div class="center">
-    <img src="image/葡萄藤logo.png"/>
-    <p>葡萄糖</p>
+    <img src="image/整合透底.png"/>
 </div>
 <div class="center">
     <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具</p>
 </div>
 <div class="left">
-    <div class="ellipse"><img src="image/人头.png"/></div>
+    <div class="ellipse"><img src="image/人头.png" ; align="center"/></div>
     <br/>
     <p>人口</p>
 </div>
@@ -57,4 +64,5 @@
     <p>logo</p>
 </div>
 </body>
+
 </html>
