delete the head bar and statue bar

--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
 
         body {
 
+            background-color: #68CDD5;
         }
 
         div {
@@ -82,6 +83,7 @@
     </style>
 </head>
 <body>
+<!--
 <div CLASS="status-bar">
 
     <span class="left">Applidium</span>
@@ -93,6 +95,7 @@
     <!span class="center"><span>魔镜</span><!/span>
     <span class="right">0 0 0</span>
 </div>
+-->
 
 <div>
     <div class="article">
