the final edit i hope

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>魔镜</title>
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
@@ -9,7 +10,7 @@
 <div>
     <!div class="left-corner"><img src="image/记录页_03.png" ; align="center"/><!/div>
 </div>
-<br/>https://github.com/settings/emails
+<br/>
     <div class="article">
         <div class="block">
             <div class="center"><img src="image/整合透底.png"/></div>
